--- a/opengl_new.vcxproj
+++ b/opengl_new.vcxproj
@@ -171,22 +171,15 @@
     <ClCompile Include="vendors\stb\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="example_project\stages\shooter\actors\bullet.h" />
     <ClInclude Include="src\core\log\log.h" />
     <ClInclude Include="src\core\log\log_defaults.h" />
     <ClInclude Include="src\core\log\log_enums.h" />
     <ClInclude Include="src\core\log\log_getters.h" />
-    <ClInclude Include="test_project\scripts\game\actors\block.h" />
-    <ClInclude Include="test_project\scripts\game\actors\block2.h" />
-    <ClInclude Include="test_project\scripts\game\actors\coin.h" />
-    <ClInclude Include="test_project\scripts\game\actors\counter.h" />
-    <ClInclude Include="test_project\scripts\game\actors\player1.h" />
-    <ClInclude Include="test_project\scripts\game\actors\player2.h" />
-    <ClInclude Include="test_project\scripts\game\actors\spam.h" />
-    <ClInclude Include="test_project\scripts\game\actors\text.h" />
-    <ClInclude Include="test_project\scripts\main_menu\actors\bit.h" />
-    <ClInclude Include="test_project\scripts\main_menu\actors\home_button.h" />
+    <ClInclude Include="example_project\stages\main_menu\actors\bit.h" />
+    <ClInclude Include="example_project\stages\main_menu\actors\home_button.h" />
     <ClInclude Include="kawa.h" />
-    <ClInclude Include="test_project\scripts\main_menu\actors\play_button.h" />
+    <ClInclude Include="example_project\stages\main_menu\actors\play_button.h" />
     <ClInclude Include="src\debug\assert.h" />
     <ClInclude Include="src\debug\debug.h" />
     <ClInclude Include="src\debug\log.h" />
@@ -199,13 +192,11 @@
     <ClInclude Include="src\renderer\VBO.h" />
     <ClInclude Include="src\scene\scene.h" />
     <ClInclude Include="src\core\data_structures\dynamic_registry.h" />
-    <ClInclude Include="test_project\kawa_test_project.h" />
-    <ClInclude Include="test_project\scripts\main_menu\logic.h" />
+    <ClInclude Include="example_project\stages\main_menu\logic.h" />
     <ClInclude Include="src\core\data_structures\sentinel_set.h" />
     <ClInclude Include="src\core\data_structures\dense_set.h" />
     <ClInclude Include="src\core\macros.h" />
     <ClInclude Include="src\core_scripts\renderer_scripts.h" />
-    <ClInclude Include="test_project\scripts\game\actors\actors.h" />
     <ClInclude Include="src\scene\entity.h" />
     <ClInclude Include="src\core\window.h" />
     <ClInclude Include="src\core\application.h" />
@@ -216,12 +207,11 @@
     <ClInclude Include="src\core\data_structures\ssrutils.h" />
     <ClInclude Include="src\utils.h" />
     <ClInclude Include="src\renderer\texture.h" />
-    <ClInclude Include="test_project\scripts\game\logic.h" />
-    <ClInclude Include="test_project\scripts\shared\ortho_camera.h" />
-    <ClInclude Include="test_project\scripts\shooter\actors\asteroid.h" />
-    <ClInclude Include="test_project\scripts\shooter\actors\background.h" />
-    <ClInclude Include="test_project\scripts\shooter\logic.h" />
-    <ClInclude Include="test_project\scripts\shooter\actors\ship.h" />
+    <ClInclude Include="example_project\stages\shared\ortho_camera.h" />
+    <ClInclude Include="example_project\stages\shooter\actors\asteroid.h" />
+    <ClInclude Include="example_project\stages\shooter\actors\background.h" />
+    <ClInclude Include="example_project\stages\shooter\logic.h" />
+    <ClInclude Include="example_project\stages\shooter\actors\ship.h" />
     <ClInclude Include="vendors\stb\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
